--- a/package.json
+++ b/package.json
@@ -9,9 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.5",
+    "@reduxjs/toolkit": "^2.0.1",
+    "date-fns": "^3.2.0",
+    "date-fns-tz": "^2.0.0",
+    "mongoose": "^8.1.0",
+    "next": "14.0.4",
     "react": "^18",
+    "react-big-calendar": "^1.8.6",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.3.0",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
